--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.2",
-    "autoprefixer": "^10.4.14",
-    "clsx": "^1.2.1",
-    "feed": "^4.2.2",
-    "focus-visible": "^5.2.0",
-    "mdast-util-to-string": "^3.2.0",
-    "mdx-annotations": "^0.1.3",
-    "motion": "^10.15.5",
-    "next": "13.4.2",
-    "next-themes": "^0.2.1",
-    "postcss-focus-visible": "^8.0.2",
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/react": "2.3.0",
+    "@next/mdx": "13.4.5",
+    "autoprefixer": "10.4.14",
+    "clsx": "1.2.1",
+    "feed": "4.2.2",
+    "focus-visible": "5.2.0",
+    "mdast-util-to-string": "3.2.0",
+    "mdx-annotations": "0.1.3",
+    "motion": "10.16.2",
+    "next": "13.4.5",
+    "next-themes": "0.2.1",
+    "postcss-focus-visible": "8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recma-import-images": "^0.0.3",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "remark-rehype-wrap": "^0.0.2",
-    "remark-unwrap-images": "^3.0.1",
-    "shiki": "^0.14.2",
-    "tailwindcss": "^3.3.2",
-    "unist-util-visit": "^4.1.2"
+    "recma-import-images": "0.0.3",
+    "rehype-autolink-headings": "6.1.1",
+    "rehype-slug": "5.1.0",
+    "remark-gfm": "3.0.1",
+    "remark-rehype-wrap": "0.0.2",
+    "remark-unwrap-images": "3.0.1",
+    "shiki": "0.14.2",
+    "tailwindcss": "3.3.2",
+    "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
-    "sharp": "^0.32.1"
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.5",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "0.3.0",
+    "sharp": "0.32.1"
   }
 }
