--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "tailwindui-commit",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.4.9",
-    "autoprefixer": "10.4.14",
+    "@next/mdx": "13.5.1",
+    "autoprefixer": "10.4.15",
     "clsx": "1.2.1",
     "feed": "4.2.2",
     "focus-visible": "5.2.0",
     "mdast-util-to-string": "3.2.0",
     "mdx-annotations": "0.1.3",
     "motion": "10.16.2",
-    "next": "13.4.9",
+    "next": "13.5.1",
     "next-themes": "0.2.1",
     "postcss-focus-visible": "8.0.2",
     "react": "18.2.0",
@@ -31,15 +22,24 @@
     "remark-gfm": "3.0.1",
     "remark-rehype-wrap": "0.0.3",
     "remark-unwrap-images": "3.0.1",
-    "shiki": "0.14.3",
-    "tailwindcss": "3.3.2",
+    "shiki": "0.14.4",
+    "tailwindcss": "3.3.3",
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "0.3.0",
-    "sharp": "0.32.1"
-  }
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.5.1",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "0.5.4",
+    "sharp": "0.32.6"
+  },
+  "name": "tailwindui-commit",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "version": "0.1.0"
 }
