--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "dependencies": {
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
-    "@next/mdx": "13.5.1",
-    "autoprefixer": "10.4.15",
+    "@next/mdx": "13.5.4",
+    "autoprefixer": "10.4.16",
     "clsx": "1.2.1",
     "feed": "4.2.2",
     "focus-visible": "5.2.0",
     "mdast-util-to-string": "3.2.0",
     "mdx-annotations": "0.1.3",
-    "motion": "10.16.2",
-    "next": "13.5.1",
+    "motion": "10.16.4",
+    "next": "13.5.4",
     "next-themes": "0.2.1",
     "postcss-focus-visible": "8.0.2",
     "react": "18.2.0",
@@ -27,13 +27,13 @@
     "unist-util-visit": "4.1.2"
   },
   "devDependencies": {
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.4",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
     "sharp": "0.32.6"
   },
-  "name": "tailwindui-commit",
+  "name": "noticias-dev",
   "private": true,
   "scripts": {
     "build": "next build",
